3sem/IFJ/IFJ-Project/tests/type/errors/test_error_string_plus_num.wren
import "ifj25" for Ifj

// ERROR: String + Num is not allowed
// Expected error: SEMANTIC_TYPE_EXPR_ERROR (6)

class Program {
	static main() {
		var wrong
		wrong = "hello" + 5
	}
}

